# cypress_linux

./: .gitignore  CMakeLists.txt  README.md
build-controlcenter-ubantu_64-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-controlcenter-ubantu_64-Debug/debug/: moc_controlcenter.cpp
gui_src/: controlcenter.cpp  controlcenter.pro  controlcenter.ui  fx2_download.cpp  fx3_download.cpp  main.cpp  streamer.cpp
lib/: libcyusb.so.1
